[project]
name = "C-Vise"
authors = [{ name = "Martin Liška", email = "marxin.liska@gmail.com" }, { name = "Moritz Pflanzer", email = "moritz@pflanzer.eu" }]
maintainers = [{ name = "Martin Liška", email = "marxin.liska@gmail.com" }]
description = "C-Vise is a super-parallel Python port of the C-Reduce."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.8"

[tool.ruff]
exclude = ["objdir", "tree-sitter", "tree-sitter-cpp"]

line-length = 120

[tool.ruff.lint]
ignore = [
    "E501",
    "UP031",
    "UP006",  # incorrectly suggests "Use `list` instead of `List` for type annotation" which is incompatible with Python 3.8
    "UP007",  # incorrectly suggests "Use `X | Y` for type annotations" which is incompatible with Python 3.8
]
select = ["B", "E", "F", "W", "UP", "C4"] # consider: ["I", "RUF"]
preview = true

[tool.ruff.format]
quote-style="single"
