[project]
name = "C-Vise"
authors = [{ name = "Martin Liška", email = "marxin.liska@gmail.com" }, { name = "Moritz Pflanzer", email = "moritz@pflanzer.eu" }]
maintainers = [{ name = "Martin Liška", email = "marxin.liska@gmail.com" }]
description = "C-Vise is a super-parallel Python port of the C-Reduce."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.9"

[tool.ruff]
exclude = ["objdir", "tree-sitter", "tree-sitter-cpp"]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
ignore = [
    "E501",
    "UP031",
]
select = ["B", "E", "F", "W", "UP", "C4"] # consider: ["I", "RUF"]
preview = true

[tool.ruff.format]
quote-style="single"
